# ipopt-rs

./: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  README.md
examples/: constrained_quadratic_minimization.rs
ipopt-sys/: Cargo.toml  README.md  build.rs
ipopt-sys/cnlp/: CMakeLists.txt
ipopt-sys/cnlp/src/: c_api.cpp  c_api.h  nlp.cpp  nlp.hpp
ipopt-sys/cnlp/tests/: Makefile  hs071_main.c  hs071_nlp.c  hs071_nlp.h
ipopt-sys/src/: IpStdCInterface.cpp  IpStdCInterface.h  IpStdFInterface.c  IpStdInterfaceTNLP.cpp  IpStdInterfaceTNLP.hpp  lib.rs
src/: lib.rs
tests/: constrained_newton.rs  dynamic_problem_size.rs  ipopt.rs  unconstrained_approx_newton.rs
