[package]
name = "ipopt"
version = "0.1.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
license = "Apache-2.0"
description = "Rust language bindings for the Ipopt non-linear constrained optimization library."
readme = "README.md"

homepage = "https://github.com/elrnv/ipopt-rs"
repository = "https://github.com/elrnv/ipopt-rs"
documentation = "https://docs.rs/ipopt-rs"

keywords = ["non-linear", "optimization", "constrained", "ipopt", "newton"]

[dependencies]
ipopt-sys = { path = "ipopt-sys", version = "0.1.0" }

[dev-dependencies]
approx = "0.3"
